# financial-roaster

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py
core/: simple_graph.py
core/parsers/: __init__.py  csv_parser.py  normalize.py  pdf_parser.py
frontend/: index.html
