[project]
name = "roast-financial-v2"
version = "0.1.0"
description = "Minimal Roast Financial API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "langchain>=0.2",
  "langgraph>=0.1",
  "langchain-aws>=0.1.0",
  "bedrock-agentcore",
  "boto3>=1.34",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "core", "agents"]
exclude = ["roast*", "venv*", ".venv*"]
